// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`insufficientBoostLiquidity > creates a failed boost record for vault swaps 1`] = `
[
  {
    "amount": "1000000",
    "asset": "Btc",
    "failedAtBlockIndex": "120-7",
    "failedAtTimestamp": 2022-12-06T14:31:45.000Z,
    "id": Any<Number>,
    "prewitnessedDepositId": 1n,
    "swapDepositChannelId": null,
  },
]
`;

exports[`insufficientBoostLiquidity > creates a failed boost record linked to the swap deposit channel 1`] = `
[
  {
    "amount": "1000000",
    "asset": "Btc",
    "failedAtBlockIndex": "120-7",
    "failedAtTimestamp": 2022-12-06T14:31:45.000Z,
    "id": Any<Number>,
    "prewitnessedDepositId": 1n,
    "swapDepositChannelId": Any<BigInt>,
  },
]
`;
